A3/main.output
Terminals unused in grammar

   TYPE_NAME
   CONSTANT
   CONST
   SIGNED
   UNSIGNED
   ADD_ASSIGN
   SUB_ASSIGN
   MUL_ASSIGN
   DIV_ASSIGN
   MOD_ASSIGN
   AND_ASSIGN
   XOR_ASSIGN
   OR_ASSIGN
   PTR_OP
   CONTINUE
   P_CHANNEL_CAP


State 91 conflicts: 1 shift/reduce
State 289 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list compound_statement
    6                    | declaration_specifiers declarator compound_statement

    7 declaration_list: declaration
    8                 | declaration_list declaration

    9 primary_expression: id_or_float
   10                   | STRING_LITERAL
   11                   | '(' expression ')'
   12                   | special_expression

   13 id_or_float: FLOAT_CONST
   14            | id_or_int

   15 id_or_int: INTEGER
   16          | IDENTIFIER

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 postfix_expression: primary_expression
   20                   | postfix_expression '[' expression ']'
   21                   | postfix_expression '(' ')'
   22                   | postfix_expression '(' argument_expression_list ')'
   23                   | postfix_expression '.' special_function
   24                   | postfix_expression INC_OP
   25                   | postfix_expression DEC_OP

   26 special_function: is_running
   27                 | submit_jobs
   28                 | get_clock_speed
   29                 | discard_job
   30                 | get_available_memory
   31                 | get_memory

   32 unary_expression: postfix_expression
   33                 | INC_OP unary_expression
   34                 | DEC_OP unary_expression
   35                 | unary_operator cast_expression

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '!'

   41 cast_expression: unary_expression
   42                | '(' type_specifier ')' unary_expression

   43 multiplicative_expression: cast_expression
   44                          | multiplicative_expression '*' cast_expression
   45                          | multiplicative_expression '/' cast_expression
   46                          | multiplicative_expression '%' cast_expression

   47 additive_expression: multiplicative_expression
   48                    | additive_expression '+' multiplicative_expression
   49                    | additive_expression '-' multiplicative_expression

   50 shift_expression: additive_expression
   51                 | shift_expression LEFT_OP additive_expression
   52                 | shift_expression RIGHT_OP additive_expression

   53 relational_expression: shift_expression
   54                      | relational_expression '<' shift_expression
   55                      | relational_expression '>' shift_expression
   56                      | relational_expression LE_OP shift_expression
   57                      | relational_expression GE_OP shift_expression

   58 equality_expression: relational_expression
   59                    | equality_expression EQ_OP relational_expression
   60                    | equality_expression NE_OP relational_expression

   61 and_expression: equality_expression
   62               | and_expression '&' equality_expression

   63 exclusive_or_expression: and_expression
   64                        | exclusive_or_expression '^' and_expression

   65 inclusive_or_expression: exclusive_or_expression
   66                        | inclusive_or_expression '|' exclusive_or_expression

   67 logical_and_expression: inclusive_or_expression
   68                       | logical_and_expression AND_OP inclusive_or_expression

   69 logical_or_expression: logical_and_expression
   70                      | logical_or_expression OR_OP logical_and_expression

   71 conditional_expression: logical_or_expression
   72                       | logical_or_expression '?' expression ':' conditional_expression

   73 special_expression: processor
   74                   | run
   75                   | link
   76                   | memory
   77                   | job
   78                   | cluster

   79 assignment_expression: conditional_expression
   80                      | unary_expression '=' assignment_expression

   81 expression: assignment_expression
   82           | expression ',' assignment_expression

   83 declaration: declaration_specifiers ';'
   84            | declaration_specifiers init_declarator_list ';'

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator '=' assignment_expression
   88                | declarator

   89 declaration_specifiers: type_specifier
   90                       | type_specifier declaration_specifiers

   91 type_specifier: VOID
   92               | CHAR
   93               | SHORT
   94               | INT
   95               | LONG
   96               | FLOAT
   97               | DOUBLE
   98               | BOOL

   99 declarator: IDENTIFIER
  100           | '(' declarator ')'
  101           | declarator '[' assignment_expression ']'
  102           | declarator '[' '*' ']'
  103           | declarator '[' ']'
  104           | declarator '(' parameter_list ')'
  105           | declarator '(' identifier_list ')'
  106           | declarator '(' ')'

  107 parameter_list: parameter_declaration
  108               | parameter_list ',' parameter_declaration

  109 parameter_declaration: declaration_specifiers declarator
  110                      | declaration_specifiers

  111 identifier_list: IDENTIFIER
  112                | identifier_list ',' IDENTIFIER

  113 statement: compound_statement
  114          | expression_statement
  115          | selection_statement
  116          | iteration_statement
  117          | jump_statement

  118 compound_statement: '{' '}'
  119                   | '{' block_item_list '}'

  120 block_item_list: block_item
  121                | block_item_list block_item

  122 block_item: declaration
  123           | statement

  124 expression_statement: ';'
  125                     | expression ';'

  126 selection_statement: IF '(' expression ')' statement
  127                    | IF '(' expression ')' statement ELSE statement

  128 iteration_statement: WHILE '(' expression ')' statement
  129                    | DO statement WHILE '(' expression ')' ';'
  130                    | FOR '(' expression_statement expression_statement ')' statement
  131                    | FOR '(' expression_statement expression_statement expression ')' statement
  132                    | FOR '(' declaration expression_statement ')' statement
  133                    | FOR '(' declaration expression_statement expression ')' statement

  134 jump_statement: IDENTIFIER ';'
  135               | BREAK ';'
  136               | RETURN ';'
  137               | RETURN expression ';'

  138 cidentifers: IDENTIFIER
  139            | IDENTIFIER ',' cidentifers

  140 cstrings: STRING_LITERAL
  141         | ',' P_NAME '=' STRING_LITERAL
  142         | ',' P_NAME '=' "None"
  143         | %empty

  144 processor: C_PROC '(' processor_isa ',' processor_clock_speed ',' processor_l1 processor_optional ')'

  145 processor_isa: P_ISA '=' STRING_LITERAL
  146              | STRING_LITERAL

  147 processor_clock_speed: P_CLOCK_SPEED ':' assignment_expression
  148                      | assignment_expression

  149 processor_l1: P_MEM_OBJ_1 '=' l1
  150             | l1

  151 l1: IDENTIFIER
  152   | memory

  153 processor_optional: ',' P_MEM_OBJ_2_EQ l1 cstrings
  154                   | ',' P_MEM_OBJ_2_EQ "None" cstrings
  155                   | cstrings

  156 P_MEM_OBJ_2_EQ: P_MEM_OBJ_2 '='
  157               | %empty

  158 is_running: IDENTIFIER '.' MF_IS_RUNNING '(' ')'

  159 submit_jobs: MF_SUBMIT_JOBS '(' cluster_array ')'

  160 get_clock_speed: IDENTIFIER '.' MF_GET_CS '(' ')'

  161 run: MF_RUN '(' cluster_array ')'

  162 discard_job: IDENTIFIER '.' MF_DISCARD_JOB '(' IDENTIFIER ')'

  163 link: C_LINK '(' link_start_point ',' link_end_point ',' link_bandwidth ',' assignment_expression cstrings ')'

  164 link_start_point: P_START_POINT '=' STRING_LITERAL
  165                 | STRING_LITERAL

  166 link_end_point: P_END_POINT '=' STRING_LITERAL
  167               | STRING_LITERAL

  168 link_bandwidth: P_BANDWIDTH '=' assignment_expression
  169               | assignment_expression

  170 memory: C_MEMORY '(' P_MEM_TYPE_EQ STRING_LITERAL ',' P_MEM_SIZE_EQ assignment_expression cstrings ')'

  171 P_MEM_TYPE_EQ: P_MEM_TYPE '='
  172              | %empty

  173 P_MEM_SIZE_EQ: P_MEM_SIZE '='
  174              | %empty

  175 get_available_memory: IDENTIFIER '.' MF_GAV '(' ')'

  176 job: C_JOB '(' job_id ',' job_flops_required ',' job_deadline ',' job_memory_required ',' job_affinity ')'

  177 job_id: P_JOB_ID '=' assignment_expression
  178       | assignment_expression

  179 job_flops_required: P_FLOPS_REQ '=' assignment_expression
  180                   | assignment_expression

  181 job_deadline: P_DEADLINE '=' assignment_expression
  182             | assignment_expression

  183 job_memory_required: P_MEM_REQ '=' assignment_expression
  184                    | assignment_expression

  185 job_affinity: P_AFFINITY '=' affinity
  186             | affinity

  187 affinity: IDENTIFIER
  188         | '[' assignment_expression ',' assignment_expression ',' assignment_expression ',' assignment_expression ']'

  189 get_memory: IDENTIFIER '.' MF_GET_MEMORY '(' ')'

  190 cluster: C_CLUSTER '(' cluster_processors ',' cluster_topology ',' cluster_link_bandwidth ',' cluster_link_capacity cstrings ')'

  191 cluster_processors: P_PROCESSORS '=' cluster_array
  192                   | cluster_array

  193 cluster_topology: P_TOPOLOGY '=' STRING_LITERAL
  194                 | STRING_LITERAL

  195 cluster_link_bandwidth: P_LINK_BANDW '=' assignment_expression
  196                       | assignment_expression

  197 cluster_link_capacity: P_LINK_CAP '=' assignment_expression
  198                      | assignment_expression

  199 cluster_array: IDENTIFIER
  200              | '[' cidentifers ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'%' (37) 46
'&' (38) 36 62
'(' (40) 11 21 22 42 100 104 105 106 126 127 128 129 130 131 132 133
    144 158 159 160 161 162 163 170 175 176 189 190
')' (41) 11 21 22 42 100 104 105 106 126 127 128 129 130 131 132 133
    144 158 159 160 161 162 163 170 175 176 189 190
'*' (42) 37 44 102
'+' (43) 38 48
',' (44) 18 82 86 108 112 139 141 142 144 153 154 163 170 176 188 190
'-' (45) 39 49
'.' (46) 23 158 160 162 175 189
'/' (47) 45
':' (58) 72 147
';' (59) 83 84 124 125 129 134 135 136 137
'<' (60) 54
'=' (61) 80 87 141 142 145 149 156 164 166 168 171 173 177 179 181
    183 185 191 193 195 197
'>' (62) 55
'?' (63) 72
'[' (91) 20 101 102 103 188 200
']' (93) 20 101 102 103 188 200
'^' (94) 64
'{' (123) 118 119
'|' (124) 66
'}' (125) 118 119
error (256)
TYPE_NAME (258)
VOID (259) 91
CONSTANT (260)
LEFT_OP (261) 51
RIGHT_OP (262) 52
IDENTIFIER (263) 16 99 111 112 134 138 139 151 158 160 162 175 187
    189 199
FLOAT_CONST (264) 13
BOOL (265) 98
STRING_LITERAL (266) 10 140 141 145 146 164 165 166 167 170 193 194
CONST (267)
CHAR (268) 92
INT (269) 94
LONG (270) 95
RETURN (271) 136 137
SHORT (272) 93
SIGNED (273)
UNSIGNED (274)
INTEGER (275) 15
FLOAT (276) 96
DOUBLE (277) 97
ADD_ASSIGN (278)
SUB_ASSIGN (279)
MUL_ASSIGN (280)
DIV_ASSIGN (281)
MOD_ASSIGN (282)
AND_ASSIGN (283)
XOR_ASSIGN (284)
OR_ASSIGN (285)
INC_OP (286) 24 33
DEC_OP (287) 25 34
PTR_OP (288)
AND_OP (289) 68
OR_OP (290) 70
LE_OP (291) 56
GE_OP (292) 57
EQ_OP (293) 59
NE_OP (294) 60
DO (295) 129
WHILE (296) 128 129
ELSE (297) 127
FOR (298) 130 131 132 133
IF (299) 126 127
BREAK (300) 135
CONTINUE (301)
MF_GET_MEMORY (302) 189
MF_IS_RUNNING (303) 158
MF_SUBMIT_JOBS (304) 159
MF_GET_CS (305) 160
MF_RUN (306) 161
MF_DISCARD_JOB (307) 162
MF_GAV (308) 175
P_NAME (309) 141 142
P_ISA (310) 145
P_CLOCK_SPEED (311) 147
P_MEM_OBJ_1 (312) 149
P_MEM_OBJ_2 (313) 156
P_START_POINT (314) 164
P_END_POINT (315) 166
P_BANDWIDTH (316) 168
P_CHANNEL_CAP (317)
P_MEM_TYPE (318) 171
P_MEM_SIZE (319) 173
P_JOB_ID (320) 177
P_FLOPS_REQ (321) 179
P_DEADLINE (322) 181
P_MEM_REQ (323) 183
P_AFFINITY (324) 185
P_PROCESSORS (325) 191
P_LINK_BANDW (326) 195
P_LINK_CAP (327) 197
P_TOPOLOGY (328) 193
C_PROC (329) 144
C_CLUSTER (330) 190
C_LINK (331) 163
C_MEMORY (332) 170
C_JOB (333) 176
"None" (334) 142 154


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
translation_unit (104)
    on left: 1 2, on right: 0 2
external_declaration (105)
    on left: 3 4, on right: 1 2
function_definition (106)
    on left: 5 6, on right: 3
declaration_list (107)
    on left: 7 8, on right: 5 8
primary_expression (108)
    on left: 9 10 11 12, on right: 19
id_or_float (109)
    on left: 13 14, on right: 9
id_or_int (110)
    on left: 15 16, on right: 14
argument_expression_list (111)
    on left: 17 18, on right: 18 22
postfix_expression (112)
    on left: 19 20 21 22 23 24 25, on right: 20 21 22 23 24 25 32
special_function (113)
    on left: 26 27 28 29 30 31, on right: 23
unary_expression (114)
    on left: 32 33 34 35, on right: 33 34 41 42 80
unary_operator (115)
    on left: 36 37 38 39 40, on right: 35
cast_expression (116)
    on left: 41 42, on right: 35 43 44 45 46
multiplicative_expression (117)
    on left: 43 44 45 46, on right: 44 45 46 47 48 49
additive_expression (118)
    on left: 47 48 49, on right: 48 49 50 51 52
shift_expression (119)
    on left: 50 51 52, on right: 51 52 53 54 55 56 57
relational_expression (120)
    on left: 53 54 55 56 57, on right: 54 55 56 57 58 59 60
equality_expression (121)
    on left: 58 59 60, on right: 59 60 61 62
and_expression (122)
    on left: 61 62, on right: 62 63 64
exclusive_or_expression (123)
    on left: 63 64, on right: 64 65 66
inclusive_or_expression (124)
    on left: 65 66, on right: 66 67 68
logical_and_expression (125)
    on left: 67 68, on right: 68 69 70
logical_or_expression (126)
    on left: 69 70, on right: 70 71 72
conditional_expression (127)
    on left: 71 72, on right: 72 79
special_expression (128)
    on left: 73 74 75 76 77 78, on right: 12
assignment_expression (129)
    on left: 79 80, on right: 17 18 80 81 82 87 101 147 148 163 168
    169 170 177 178 179 180 181 182 183 184 188 195 196 197 198
expression (130)
    on left: 81 82, on right: 11 20 72 82 125 126 127 128 129 131 133
    137
declaration (131)
    on left: 83 84, on right: 4 7 8 122 132 133
init_declarator_list (132)
    on left: 85 86, on right: 84 86
init_declarator (133)
    on left: 87 88, on right: 85 86
declaration_specifiers (134)
    on left: 89 90, on right: 5 6 83 84 90 109 110
type_specifier (135)
    on left: 91 92 93 94 95 96 97 98, on right: 42 89 90
declarator (136)
    on left: 99 100 101 102 103 104 105 106, on right: 5 6 87 88 100
    101 102 103 104 105 106 109
parameter_list (137)
    on left: 107 108, on right: 104 108
parameter_declaration (138)
    on left: 109 110, on right: 107 108
identifier_list (139)
    on left: 111 112, on right: 105 112
statement (140)
    on left: 113 114 115 116 117, on right: 123 126 127 128 129 130
    131 132 133
compound_statement (141)
    on left: 118 119, on right: 5 6 113
block_item_list (142)
    on left: 120 121, on right: 119 121
block_item (143)
    on left: 122 123, on right: 120 121
expression_statement (144)
    on left: 124 125, on right: 114 130 131 132 133
selection_statement (145)
    on left: 126 127, on right: 115
iteration_statement (146)
    on left: 128 129 130 131 132 133, on right: 116
jump_statement (147)
    on left: 134 135 136 137, on right: 117
cidentifers (148)
    on left: 138 139, on right: 139 200
cstrings (149)
    on left: 140 141 142 143, on right: 153 154 155 163 170 190
processor (150)
    on left: 144, on right: 73
processor_isa (151)
    on left: 145 146, on right: 144
processor_clock_speed (152)
    on left: 147 148, on right: 144
processor_l1 (153)
    on left: 149 150, on right: 144
l1 (154)
    on left: 151 152, on right: 149 150 153
processor_optional (155)
    on left: 153 154 155, on right: 144
P_MEM_OBJ_2_EQ (156)
    on left: 156 157, on right: 153 154
is_running (157)
    on left: 158, on right: 26
submit_jobs (158)
    on left: 159, on right: 27
get_clock_speed (159)
    on left: 160, on right: 28
run (160)
    on left: 161, on right: 74
discard_job (161)
    on left: 162, on right: 29
link (162)
    on left: 163, on right: 75
link_start_point (163)
    on left: 164 165, on right: 163
link_end_point (164)
    on left: 166 167, on right: 163
link_bandwidth (165)
    on left: 168 169, on right: 163
memory (166)
    on left: 170, on right: 76 152
P_MEM_TYPE_EQ (167)
    on left: 171 172, on right: 170
P_MEM_SIZE_EQ (168)
    on left: 173 174, on right: 170
get_available_memory (169)
    on left: 175, on right: 30
job (170)
    on left: 176, on right: 77
job_id (171)
    on left: 177 178, on right: 176
job_flops_required (172)
    on left: 179 180, on right: 176
job_deadline (173)
    on left: 181 182, on right: 176
job_memory_required (174)
    on left: 183 184, on right: 176
job_affinity (175)
    on left: 185 186, on right: 176
affinity (176)
    on left: 187 188, on right: 185 186
get_memory (177)
    on left: 189, on right: 31
cluster (178)
    on left: 190, on right: 78
cluster_processors (179)
    on left: 191 192, on right: 190
cluster_topology (180)
    on left: 193 194, on right: 190
cluster_link_bandwidth (181)
    on left: 195 196, on right: 190
cluster_link_capacity (182)
    on left: 197 198, on right: 190
cluster_array (183)
    on left: 199 200, on right: 159 161 191 192


State 0

    0 $accept: . translation_unit $end

    VOID    shift, and go to state 1
    BOOL    shift, and go to state 2
    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    LONG    shift, and go to state 5
    SHORT   shift, and go to state 6
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8

    translation_unit        go to state 9
    external_declaration    go to state 10
    function_definition     go to state 11
    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14


State 1

   91 type_specifier: VOID .

    $default  reduce using rule 91 (type_specifier)


State 2

   98 type_specifier: BOOL .

    $default  reduce using rule 98 (type_specifier)


State 3

   92 type_specifier: CHAR .

    $default  reduce using rule 92 (type_specifier)


State 4

   94 type_specifier: INT .

    $default  reduce using rule 94 (type_specifier)


State 5

   95 type_specifier: LONG .

    $default  reduce using rule 95 (type_specifier)


State 6

   93 type_specifier: SHORT .

    $default  reduce using rule 93 (type_specifier)


State 7

   96 type_specifier: FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 8

   97 type_specifier: DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 9

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end    shift, and go to state 15
    VOID    shift, and go to state 1
    BOOL    shift, and go to state 2
    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    LONG    shift, and go to state 5
    SHORT   shift, and go to state 6
    FLOAT   shift, and go to state 7
    DOUBLE  shift, and go to state 8

    external_declaration    go to state 16
    function_definition     go to state 11
    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14


State 10

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 11

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 12

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 13

    5 function_definition: declaration_specifiers . declarator declaration_list compound_statement
    6                    | declaration_specifiers . declarator compound_statement
   83 declaration: declaration_specifiers . ';'
   84            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 17
    '('         shift, and go to state 18
    ';'         shift, and go to state 19

    init_declarator_list  go to state 20
    init_declarator       go to state 21
    declarator            go to state 22


State 14
